force-app/main/default/objects/Devlog__c/Devlog__c.object-meta.xml
<CustomObject>
    <description>Keeps debug messages created by developers</description>
    <label>Devlog</label>
    <nameField>
        <displayFormat>DL-{0000}</displayFormat>
        <label>Dev Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Devlogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>