force-app/main/default/objects/Devlog__c/fields/Messageexception__c.field-meta.xml
<CustomField>
    <fullName>Messageexception__c</fullName>
    <description>Message given by the Exception</description>
    <label>Message Exception</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>