force-app/main/default/objects/Devlog__c/fields/Messagepersonal__c.field-meta.xml
<CustomField>
    <fullName>Messagepersonal__c</fullName>
    <description>Personal Message of the error</description>
    <label>Message Personal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>