force-app/main/default/objects/Devlog__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <description>Type of the debug</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
            </value>
            <value>
                <fullName>WARNING</fullName>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>