force-app/main/default/objects/Devlog__c/fields/Where__c.field-meta.xml
<CustomField>
    <fullName>Where__c</fullName>
    <description>Where the error happened</description>
    <label>Where</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>